# context-fabric-mcp

./: .env.example  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
src/context_fabric_mcp/: api.py  cf_engine.py  chat.py  quiz_engine.py  server.py
src/context_fabric_mcp/tools/: passage.py  quiz.py  schema.py  search.py  vocab.py
tests/: test_api.py  test_cf_engine.py  test_quiz.py
